@@ -266,6 +266,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * action=login now returns the correct waiting time in the details property
 * (bug 13792) Broken titles are now silently skipped in search results.
 * (bug 13819) exturlusage paging skipped an item
+* Fixed handling of usernames containing spaces in list=block
 
 === Languages updated in 1.13 ===
 
